--- a/@frontend/app/globals.css
+++ b/@frontend/app/globals.css
@@ -7,7 +7,7 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-inter), var(--font-noto-kr), system-ui, sans-serif;
-  --font-mono: var(--font-geist-mono);
+  --font-logo: var(--font-sansation),
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -121,5 +121,11 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .font-logo {
+    font-family: var(--font-sansation);
   }
 }
